--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "prettier --list-different *.js",
     "fix": "prettier --write *.js",
+    "prepublishOnly": "npm test",
     "pretest": "npm run lint",
     "test": "node test"
   },
